# simple-notes-service

./: .editorconfig  BLOCKED_GATE_DEMO.md  QUALIFICATION.md  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/routers/: __init__.py  notes.py
app/services/: __init__.py
simple_notes_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_notes.py
